mdbx.h

typedef unsigned short mode_t;
typedef struct MDBX_env MDBX_env;
typedef struct MDBX_txn MDBX_txn;
typedef uint32_t MDBX_dbi;
typedef struct MDBX_cursor MDBX_cursor;
struct iovec {
  void *iov_base;
  size_t iov_len;
};
typedef struct iovec MDBX_val;
#define MDBX_MAXDATASIZE INT32_MAX
typedef int(MDBX_cmp_func)(const MDBX_val *a, const MDBX_val *b);
#define MDBX_NOSUBDIR 0x4000u
#define MDBX_NOSYNC 0x10000u
#define MDBX_RDONLY 0x20000u
#define MDBX_NOMETASYNC 0x40000u
#define MDBX_WRITEMAP 0x80000u
#define MDBX_MAPASYNC 0x100000u
#define MDBX_NOTLS 0x200000u
#define MDBX_NOLOCK__UNSUPPORTED 0x400000u
#define MDBX_NORDAHEAD 0x800000u
#define MDBX_NOMEMINIT 0x1000000u
#define MDBX_COALESCE 0x2000000u
#define MDBX_LIFORECLAIM 0x4000000u
#define MDBX_UTTERLY_NOSYNC (MDBX_NOSYNC | MDBX_MAPASYNC)
#define MDBX_PAGEPERTURB 0x8000000u
#define MDBX_REVERSEKEY 0x02u
#define MDBX_DUPSORT 0x04u
#define MDBX_INTEGERKEY 0x08u
#define MDBX_DUPFIXED 0x10u
#define MDBX_INTEGERDUP 0x20u
#define MDBX_REVERSEDUP 0x40u
#define MDBX_CREATE 0x40000u
#define MDBX_NOOVERWRITE 0x10u
#define MDBX_NODUPDATA 0x20u
#define MDBX_CURRENT 0x40u
#define MDBX_RESERVE 0x10000u
#define MDBX_APPEND 0x20000u
#define MDBX_APPENDDUP 0x40000u
#define MDBX_MULTIPLE 0x80000u
#define MDBX_TRYTXN 0x10000000u
#define MDBX_CP_COMPACT 1u
#define MDBX_SUCCESS 0
#define MDBX_RESULT_FALSE MDBX_SUCCESS
#define MDBX_RESULT_TRUE (-1)
#define MDBX_KEYEXIST (-30799)
#define MDBX_NOTFOUND (-30798)
#define MDBX_PAGE_NOTFOUND (-30797)
#define MDBX_CORRUPTED (-30796)
#define MDBX_PANIC (-30795)
#define MDBX_VERSION_MISMATCH (-30794)
#define MDBX_INVALID (-30793)
#define MDBX_MAP_FULL (-30792)
#define MDBX_DBS_FULL (-30791)
#define MDBX_READERS_FULL (-30790)
#define MDBX_TXN_FULL (-30788)
#define MDBX_CURSOR_FULL (-30787)
#define MDBX_PAGE_FULL (-30786)
#define MDBX_MAP_RESIZED (-30785)
#define MDBX_INCOMPATIBLE (-30784)
#define MDBX_BAD_RSLOT (-30783)
#define MDBX_BAD_TXN (-30782)
#define MDBX_BAD_VALSIZE (-30781)
#define MDBX_BAD_DBI (-30780)
#define MDBX_PROBLEM (-30779)
#define MDBX_BUSY (-30778)
#define MDBX_LAST_ERRCODE MDBX_BUSY
#define MDBX_EMULTIVAL (-30421)
#define MDBX_EBADSIGN (-30420)
#define MDBX_WANNA_RECOVERY (-30419)
#define MDBX_EKEYMISMATCH (-30418)
#define MDBX_TOO_LARGE (-30417)
#define MDBX_THREAD_MISMATCH (-30416)
LIBMDBX_API const char *mdbx_strerror(int errnum);
LIBMDBX_API int mdbx_env_create(MDBX_env **penv);
LIBMDBX_API int mdbx_env_open(MDBX_env *env, const char *path, unsigned flags,
                              mode_t mode);
LIBMDBX_API void mdbx_env_close(MDBX_env *env);
LIBMDBX_API int mdbx_txn_begin(MDBX_env *env, MDBX_txn *parent, unsigned flags,
                               MDBX_txn **txn);
LIBMDBX_API int mdbx_txn_commit(MDBX_txn *txn);
LIBMDBX_API int mdbx_dbi_open(MDBX_txn *txn, const char *name, unsigned flags,
                              MDBX_dbi *dbi);
#define MDBX_TBL_DIRTY 0x01 
#define MDBX_TBL_STALE 0x02 
#define MDBX_TBL_NEW 0x04   
LIBMDBX_API int mdbx_get(MDBX_txn *txn, MDBX_dbi dbi, MDBX_val *key,
                         MDBX_val *data);
LIBMDBX_API int mdbx_put(MDBX_txn *txn, MDBX_dbi dbi, MDBX_val *key,
                         MDBX_val *data, unsigned flags);
typedef int(MDBX_msg_func)(const char *msg, void *ctx);
typedef int(MDBX_oom_func)(MDBX_env *env, int pid, mdbx_tid_t tid, uint64_t txn,
                           unsigned gap, int retry);
#define MDBX_DBG_ASSERT 1
#define MDBX_DBG_PRINT 2
#define MDBX_DBG_TRACE 4
#define MDBX_DBG_EXTRA 8
#define MDBX_DBG_AUDIT 16
#define MDBX_DBG_JITTER 32
#define MDBX_DBG_DUMP 64